syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "transaction-service/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service Transaction{
  rpc CreateTransaction(createRequestTransaction) returns (createResponseTransaction){
    option (google.api.http)={
      post:"v1/transaction/create",
      body:"*"
    };
  };
  rpc UpdateTransaction(updateRequestTransaction) returns (updateResponseTransaction){
    option (google.api.http)={
      put:"v1/transaction/update",
      body:"*"
    };
  };

  rpc DeleteTransaction(deleteRequestTransaction) returns (deleteResponseTransaction){
    option (google.api.http)={
      delete:"v1/transaction/delete/{transactionId}",
      body:"*"
    };
  };

  rpc FindTransaction(findRequestTransaction) returns (findReponseTransaction){
    option (google.api.http)={
      get:"v1/transaction/find/{transactionId}",
      body:"*"
    };
  };
}


message createRequestTransaction{
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
}
message createResponseTransaction {
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
  string message=11;
}

message updateRequestTransaction{
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
}

message updateResponseTransaction{
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
  string message=11;
}



message deleteRequestTransaction{
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
}
message deleteResponseTransaction{
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
  string message=11;
}



message findRequestTransaction{
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
}

message findReponseTransaction{
  int64 transactionId=1;
  int64 accountId=2;
  int64 relatedId=3;
  string transactionType=4;
  string amount=5;
  string currency=6;
  string status=7;
  string description=8;
  string referenceNumber=9;
  string postingDate=10;
  string message=11;
}